Fix alignment and dark colours for yes/no/partial in tables.

--- a/_sass/clickwiki/bootstrap-overrides.scss
+++ b/_sass/clickwiki/bootstrap-overrides.scss
@@ -4,6 +4,8 @@
 
 // Prefer vertically aligned cells in tables.
 .table th,
+.table thead th,
+.table tbody td,
 .table td {
     vertical-align: middle;
 }
